# mini-irc-chat

./: Cargo.toml  readme.txt
mini-irc-mt-client/: Cargo.toml
mini-irc-mt-client/src/: lib.rs  main.rs
mini-irc-protocol/: Cargo.toml
mini-irc-protocol/src/: lib.rs
mini-irc-ui/: Cargo.toml
mini-irc-ui/src/: input_fuzzer.rs  lib.rs  main.rs  widgets.rs
server/: Cargo.toml
server/src/: main.rs
