[package]
name = "mini-irc-protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["std", "serde_derive"]}
serde-encrypt = "0.7.0"
serde-encrypt-core = "0.7.0"
bincode = {version = "1.3"}
tokio ={version="1.*", features=["io-util", "sync"]}
tracing = { version = "*"}
[dev-dependencies]
tokio ={version="1.*", features=["io-util", "sync", "net", "rt", "macros", "rt-multi-thread"]}

