[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
crypto_box = "0.6"
mini-irc-protocol = { path = "../mini-irc-protocol" }
serde-encrypt = "0.7.0"
serde-encrypt-core = "0.7.0"
tokio = { version = "1", features = ["full"] }
